@@ -37,4 +37,12 @@ extern MACHINE_DRIVER_EXTERN(alvg_s2);
 	SOUNDREGION(0x400000, ALVGS_ROMREGION) \
 	ALVGS_ROMLOAD4(0x000000, n2, chk2)
 
+/*-- 64K Sound CPU Rom, 2 X 256K Voice Roms --*/
+#define ALVGS_SOUNDROM12(n1,chk1,n2,chk2,n3,chk3) \
+  SOUNDREGION(0x10000, ALVGS_CPUREGION) \
+    ROM_LOAD(n1, 0x0000,  0x10000, chk1) \
+  SOUNDREGION(0x400000, ALVGS_ROMREGION) \
+    ALVGS_ROMLOAD4(0x000000, n2, chk2) \
+    ALVGS_ROMLOAD4(0x100000, n3, chk3)
+
 #endif /* INC_ALVGSOUND */
